name: hs-captcha2
version: 2.1
cabal-version: >= 1.8
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: Copyright (c) 2009 Dan Knapp, 2022 Saad Rhoulam
author: Saad Rhoulam
maintainer: saad@rhoulam.com
homepage: http://www.dankna.com/software/
bug-reports: http://www.dankna.com/issues/create/
category: Graphics
synopsis: Generate images suitable for use as CAPTCHAs in online web-form security.
description:
  Generates images suitable for use as CAPTCHAs in online web-form security.  Does not
  integrate with any web framework; simply exports a function that creates the image
  itself as a ByteString (containing a PNG), and the correct answer to the challenge as a
  String.  HS-Captcha is designed to be as simple as possible to integrate in other
  frameworks.

Library
  exposed-modules: Graphics.Captcha
  build-depends: gd, bytestring, random, base >= 4.1 && < 5
